--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-github:
-  is_project_page: false
+#github:
+#  is_project_page: false
 
 google_analytics: UA-174182477-1
