--- a/_config.yml
+++ b/_config.yml
@@ -104,3 +104,6 @@ nav_item:
   - { url: '/MyJourney', text: 'My Journey' }
   - { url: '/Education', text: 'Education'}
   - { url: '/about', text: 'about'}
+
+collections:
+  -posts
