add hire me button, make text on nav gradient colorful

--- a/_config.yml
+++ b/_config.yml
@@ -103,4 +103,5 @@ nav_item:
   - { url: '/projects', text: 'Projects' }
   - { url: '/MyJourney', text: 'My Journey' }
   - { url: '/Education', text: 'Education'}
+  - { url: 'https://forms.office.com/Pages/ResponsePage.aspx?id=BkLTzEVnUkKFBskQmbf7ON8u8clH3w9Ply3hwdZO-x9UOTFIQ001R0VLRUVEQ08wQjRRV0o5NEc1QS4u', text: 'Looking to Hire me? Click Here!'}
   # - { url: '/about', text: 'about'}
