--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,12 @@ nav_item:
   - { url: '/projects', text: 'Projects' }
   - { url: '/MyJourney', text: 'My Journey' }
   - { url: '/Education', text: 'Education'}
+  - { url: '/blogs', text: 'Blogs' }
   - { url: 'https://forms.office.com/Pages/ResponsePage.aspx?id=BkLTzEVnUkKFBskQmbf7ON8u8clH3w9Ply3hwdZO-x9UOTFIQ001R0VLRUVEQ08wQjRRV0o5NEc1QS4u', text: 'Looking to Hire me? Click Here!'}
   # - { url: '/about', text: 'about'}
+
+
+collections:
+  blogs:
+    output: true
+    permalink: /blogs/:title/
